tests/golden/expected/native4.stdout.txt
Compile error: tests/fixtures/native4.lamp:8: type error: native function "addd" has no JavaScript implementation
  8 | native function int addd(int a, int b)
    | ^
